<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">多朋家居</string>
    <string name="title_activity_share_dev">ShareDevActivity</string>
    <string name="title_activity_share_dev_user">ShareDevUserActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_water_seting">Water_setingActivity</string>
    <string name="title_activity_upgrade__water_">Upgrade_Water_Activity</string>
    <string name="title_activity_dev_share">DevShareActivity</string>
    <string name="title_activity_update_pwd">UpdatePwdActivity</string>
    <string name="title_activity_quickmark">QuickmarkActivity</string>
    <string name="title_activity_rest_pwd">RestPwdActivity</string>
    <string name="title_activity_user_message">UserMessageActivity</string>
    <string name="title_activity_delete_dialogs">DeleteDialogsActivity</string>
    <string name="title_activity_air_a">AirAActivity</string>
    <string name="scan_text"></string>
    <string name="title_activity_xulik__water">Xulik_WaterActivity</string>
    <string name="title_activity_filter_details_">Filter_details_Activity</string>
    <string name="title_activity_filter_history_">Filter_history_Activity</string>
    <string name="title_activity_showadlog">ShowadlogActivity</string>
    <string name="title_activity_link_dev">LinkDevActivity</string>
    <string name="title_activity_deploy">DeployActivity</string>
    <string name="title_activity_esptouch">EsptouchActivity</string>
    <string name="login_txt">登录</string>
    <string name="login_phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="register">注册账号</string>
    <string name="restpwd_txt">找回密码</string>
    <string name="restpwd_txt_wang">忘记密码？</string>
    <string name="action_about">关于</string>
    <string name="action_loadlist">刷新</string>
    <string name="action_settings">设置</string>
    <string name="action_logout">注销</string>
    <string name="action_scan">扫描分享</string>
    <string name="title_activity_dev_list">设备列表</string>
    <string name="title_activity_ledctrl">彩灯控制</string>
    <string name="title_activity_wifi_list">Wifi列表</string>
    <string name="title_activity_bts_ctrl">电池测试仪</string>
    <string name="title_activity_wifi">Wifi列表</string>
    <string name="title_activity_new_dev">新设备</string>
    <string name="title_activity_add_dev_step1">配置设备</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_feedback">反馈</string>
    <string name="title_activity_user_center">用户中心</string>
    <string name="title_activity_debug_setting">调试选项</string>
    <string name="drop_down_list_footer_default_text">下拉可以刷新</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="image_content">图片</string>
    <string name="title_activity_scan_result">扫描结果</string>
    <string name="start_text_yinling1">英凌</string>
    <string name="start_text_yinling2">*</string>
    <string name="start_text_yinling3">在联</string>
    <string name="main_seek">设备</string>
    <string name="main_find">发现</string>
    <string name="main_me">个人</string>
    <string name="main_me_to">个人中心</string>
    <string name="factliity">我的设备</string>
    <string name="faclity_client_text">连接设备</string>
    <string name="faclity_select_text">预览</string>
    <string name="faclity_select_cb1">英联智能插座</string>
    <string name="faclity_select_cb2">英联智能摄影机</string>
    <string name="faclity_select_cb3">水立方净水器</string>
    <string name="faclity_select_cb4">智能净水器</string>
    <string name="faclity_select_cb5">智能空气净化器</string>
    <string name="update_pwd_tilte">修改密码</string>
    <string name="Quickmark_text">二维码扫描分享</string>
    <string name="dev_share_text">设备分享</string>
    <string name="devshare">设备分享</string>
    <string name="factor_user">设备使用者</string>
    <string name="find_new_dev">发现新设备</string>
    <string name="personage_gr_fx">设备共享</string>
    <string name="personage_gr_fk">反馈</string>
    <string name="personage_gr_update">检查更新</string>
    <string name="personage_gr_update_c">固件升级</string>
    <string name="personage_gr_gy">关于</string>
    <string name="personage_gr_bx">保修情况</string>
    <string name="personage_gr_add_home">我的家人</string>
    <string name="personage_gr_share">设备分享</string>
    <string name="personage_gr_message">消息中心</string>
    <string name="personage_gr_user_txt">用户中心</string>
    <string name="pr_msg_delete">是否删除所有记录？</string>
    <string name="pr_msg_delete_true_btn">确定</string>
    <string name="pr_msg_delet_false_btne">取消</string>
    <string name="upgrade_text">此设备的固件已是最新版本</string>
    <string name="hint_operator_name">输入用户账号</string>
    <string name="send_message_txt">发送验证码</string>
    <string name="photograph">拍照</string>
    <string name="album">从相册中选择</string>
    <string name="tvApSsidTitle">WIFI名称: </string>
    <string name="tvPasswordTitle">WIFI密码: </string>
    <string name="switchIsSsidHiddenTitle">WIFI名称是否隐藏</string>
    <string name="spinnerTaskResultCountTitle">任务结果数</string>
    <string name="btnConfirmTitle">开始配置</string>
    <string name="updateAvatar_true">修改头像成功</string>
    <string name="title_activity__repairs_">_repairs_Activity</string>
    <string name="title_activity_repair__list_">Repair_List_Activity</string>
    <string name="title_activity_repair_schedule">Repair_scheduleActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>