<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_220"
        android:background="@drawable/gr_bj"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/main_me_to"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <cn.air.doopen.widget.RoundImageView
            android:id="@+id/personage_personal_details"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gr_false" />

        <TextView
            android:id="@+id/username_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55" >

        <LinearLayout
            android:id="@+id/persongae_invite_folk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/back_change"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_3"
                android:text="@string/personage_gr_add_home" />

            <TextView
                android:id="@+id/my_home_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="22dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/qianhuise" />

        <LinearLayout
            android:id="@+id/personage_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/back_change"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/personage_gr_share" />

            <TextView
                android:id="@+id/dev_share_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="22dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/qianhuise" />

        <LinearLayout
            android:id="@+id/personage_msg_sentre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/back_change"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/personage_gr_message" />

            <TextView
                android:id="@+id/dev_msg_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="22dp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:background="@color/qianhuise"
                android:orientation="horizontal" >
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/qianhuise" />

            <LinearLayout
                android:id="@+id/gw_seting"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/shazuo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="@string/action_settings"
                    android:textColor="@color/qianhaise" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/qianhuise" />

            <LinearLayout
                android:id="@+id/gw_msg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/gr_bx" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="@string/personage_gr_bx"
                    android:textColor="@color/qianhaise" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/qianhuise" />

            <LinearLayout
                android:id="@+id/personage_update"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:src="@drawable/jiating" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="27dp"
                    android:background="@null"
                    android:text="@string/personage_gr_update"
                    android:textColor="@color/qianhaise" />

                <ImageView
                    android:id="@+id/hint_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/hint"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/qianhuise" />

            <LinearLayout
                android:id="@+id/personage_tickling"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/fankui" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="@string/personage_gr_fk"
                    android:textColor="@color/qianhaise" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/qianhuise" />

            <LinearLayout
                android:id="@+id/personage_us"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/guanyu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="@string/personage_gr_gy"
                    android:textColor="@color/qianhaise" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/qianhuise" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>