<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/arltAd_relative"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#ffffff"
        android:text="取消"
        android:textColor="@color/shenhuise" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_cancel"
        android:layout_alignParentLeft="true"
        android:background="@color/white"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:id="@+id/pop_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="15dp"
                    android:text="@string/faclity_client_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/shenhuise" />

            <LinearLayout
                android:id="@+id/faclity_seekbor_jd_lb_cb"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/seekbor_jd_lb" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="连接新设备"
                    android:textColor="@color/shenhuise" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/shenhuise" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="15dp"
                    android:text="预览" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/shenhuise" />

            <LinearLayout
                android:id="@+id/faclity_select_cb_line4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/water_burfer_false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="@string/faclity_select_cb3"
                    android:textColor="@color/shenhuise" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/shenhuise" />

            <LinearLayout
                android:id="@+id/faclity_select_cb_line3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/water_burfer_false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="@string/faclity_select_cb4"
                    android:textColor="@color/shenhuise" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/shenhuise" />

            <LinearLayout
                android:id="@+id/faclity_select_cb_line5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/shexiang" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="@string/faclity_select_cb5"
                    android:textColor="@color/shenhuise" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/shenhuise" />

            <LinearLayout
                android:id="@+id/faclity_select_cb_line2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/back_change"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:src="@drawable/add_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="智能演示板"
                    android:textColor="@color/shenhuise" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/shenhuise" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>